<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical" >

    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/common_title" />

    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/common_child_title" />

    <include
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        layout="@layout/list_item_for_scheduling_setting" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            style="@style/common_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/layout_string_specify_date_remind" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Switch
            android:id="@+id/switch_specified_date_remind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <!-- 默认为隐藏状态 -->

    <include
        android:id="@+id/layout_remind_detailed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/remind_settings_layout"
        android:visibility="gone" />

    <RadioGroup
        android:id="@+id/radio_group_priority"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            style="@style/common_text_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/layout_string_priority" />

        <RadioButton
            android:id="@+id/radio_urgency"
            style="@style/common_radio_no_button_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/layout_string_urgency" />

        <RadioButton
            android:id="@+id/radio_important"
            style="@style/common_radio_no_button_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/layout_string_important" />

        <RadioButton
            android:id="@+id/radio_minor"
            style="@style/common_radio_no_button_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/layout_string_minor" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            style="@style/common_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/layout_string_auto_send_msg_to_client" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Switch
            android:id="@+id/switch_send_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <TextView
        style="@style/common_text_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/layout_string_note" />

    <EditText
        android:id="@+id/edit_note"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="left"
        android:inputType="textMultiLine"
        android:singleLine="false" />

</LinearLayout>